improv: nowrap instead of setting a fixed width

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -1,5 +1,5 @@
 .topic-list td.posts.posts-map {
   padding: 12px 0px;
-  width: 90px;
+  white-space: nowrap;
   text-align: right;
 }
